# jat

./: .gitignore  README.md  pyproject.toml  setup.cfg
.github/workflows/: build.yml  docs.yml  doctests.yml
src/treams/: __init__.py  _core.py  _operators.py  _smatrix.py  _tmatrix.py  coeffs.pxd  coeffs.pyx  config.pxd  config.pyx  cw.pyx  io.py  misc.py  pw.pyx  sw.pyx  util.py
src/treams/jcyl/: _tmatrixc.py  cw.py
src/treams/jspecial/: __init__.py  bessel.py
src/treams/lattice/: _esum.pyx
src/treams/special/: __init__.py  _integrals.pxd  _integrals.pyx  _misc.pxd  _misc.pyx  _ufuncs.pyx
tests/: .gitignore  cavity.py  cyl_diff.ipynb  diffable_aaa.py  timing.ipynb  timing2.ipynb
tests/unit/: test_coeffs.py  test_operators.py  test_smatrix.py  test_special.py  test_sw.py  test_tmatrix.py  test_tmatrixc.py
