[build-system]
requires = [
    "setuptools",
    "wheel",
    "Cython",
    "numpy>=2.0",
    "scipy>=1.14.1"
]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"

[tool.pylint.messages_control]
extension-pkg-whitelist = "treams"

[tool.cibuildwheel]
archs = ["auto64"]
skip = ["pp*", "*musllinux*"]
test-command = ""
test-extras = ["test", "io"]
